Record et tralala

--- a/front/index.html
+++ b/front/index.html
@@ -16,5 +16,7 @@
     <div id="app"></div>
 
     <script type="module" src="/src/main.js"></script>
+    <script src="https://muazkhan.com:9001/dist/RTCMultiConnection.min.js"></script>
+    <script src="https://muazkhan.com:9001/socket.io/socket.io.js"></script>
   </body>
 </html>
