[Improve] Install library RTCMultiConnection and Socket

--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,7 @@
 		<div id="app"></div>
 
 		<script type="module" src="/src/main.js"></script>
-		<script src="https://muazkhan.com:9001/dist/RTCMultiConnection.min.js" async></script>
-		<script src="https://muazkhan.com:9001/socket.io/socket.io.js" async></script>
+		<script src="/src/assets/lib/RTCMultiConnecion.min.js" async></script>
+		<script src="/src/assets/lib/socket.io.js" async></script>
 	</body>
 </html>
