[FIX] Implement in public folder and .map

--- a/front/index.html
+++ b/front/index.html
@@ -11,7 +11,7 @@
 		<div id="app"></div>
 
 		<script type="module" src="/src/main.js"></script>
-		<script src="/src/assets/lib/RTCMultiConnecion.min.js" async></script>
-		<script src="/src/assets/lib/socket.io.js" async></script>
+		<script src="/assets/lib/RTCMultiConnecion.min.js" async></script>
+		<script src="/assets/lib/socket.io.js" async></script>
 	</body>
 </html>
