--- a/front/index.html
+++ b/front/index.html
@@ -5,25 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anuphan:wght@100;200;300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
     <title>Scudo - Flux vidéo</title>
   </head>
   <body>
     <div id="app"></div>
 
     <script type="module" src="/src/main.js"></script>
-    <script src="https://muazkhan.com:9001/dist/RTCMultiConnection.min.js"></script>
-    <script src="https://muazkhan.com:9001/socket.io/socket.io.js"></script>
+    <script src="/assets/lib/RTCMultiConnecion.min.js" async></script>
+    <script src="/assets/lib/socket.io.js" async></script>
   </body>
 </html>
